fixed changing text box size for solo. muiplayer score boxes overlap images

--- a/client/src/app/pages/solo-view/solo-view.component.scss
+++ b/client/src/app/pages/solo-view/solo-view.component.scss
@@ -57,8 +57,8 @@
     position: relative;
     border-style: solid;
     background-color: white;
-    height: 80%;
     width: 90%;
+    height: 80%;
     margin-bottom: 5px;
     overflow-y: auto;
     overflow-x: hidden;
@@ -66,6 +66,10 @@
     scroll-behavior: auto;
 }
 
+.text-box.neon-border {
+    min-height: 300px;
+    max-height: 300px;
+}
 .answer-area {
     margin-top: 5px;
     width: 95%;
